Hotfix: Missing target

--- a/overlays/pair-1/transformer-schedule.yaml
+++ b/overlays/pair-1/transformer-schedule.yaml
@@ -1,6 +1,14 @@
-apiVersion: batch/v1
-kind: CronJob
+apiVersion: builtin
+kind: PatchTransformer
 metadata:
+  name: schedule-transformer
+patch: |-
+  apiVersion: batch/v1
+  kind: CronJob
+  metadata:
+    name: rclone-cronjob
+  spec:
+    schedule: "0 * * * *" # Example: Run at the top of every hour
+target:
+  kind: CronJob
   name: rclone-cronjob
-spec:
-  schedule: "0 * * * *" # Example: Run at the top of every hour
